Fixed mobile layout issue and added solution button

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ body {
     padding: 0;
     cursor: pointer;
     opacity: 70%;
+    color: rgb(94, 94, 94);
 }
 
 .special-button img {
@@ -113,13 +114,17 @@ body {
   }
 
   #special {
-    width: 90%;
+    width: 450px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
   }
   
 .special-button.number-selected {
+    opacity: 100%;
+}
+
+.special-clicked {
     opacity: 100%;
 }
 
@@ -148,6 +153,18 @@ body {
     justify-content: center;
     align-items: center;
     display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-gap: 0;
+}
+
+#solution {
+    width: 450px;
+    height: 450px;
+    margin: 20px auto;
+
+    justify-content: center;
+    align-items: center;
+    display: none;
     grid-template-columns: repeat(9, 1fr);
     grid-gap: 0;
 }
@@ -265,6 +282,10 @@ body {
         display: block;
     }
 
+    #sudoku-board {
+        margin: 0 auto;
+    }
+
     /* Hide the options menu by default */
     #options {
         position: absolute;
@@ -273,7 +294,6 @@ body {
         width: 100%;
         height: 100vh;
         background-color: #fff;
-        padding: 20px;
         display: none; /* hide the menu initially */
     }
 
@@ -305,30 +325,6 @@ body {
 
 /* Mobile-specific styles for medium screens (480px - 768px) */
 @media only screen and (min-width: 480px) and (max-width: 768px) {
-    #board {
-      width: 450px;
-      height: 450px;
-      margin: 15px auto;
-    }
-  
-    .tile {
-      width: 49px;
-      height: 49px;
-      font-size: 22px;
-    }
-  
-    #digits {
-      width: 450px;
-      height: 45px;
-      margin: 0 auto;
-    }
-  
-    .number {
-      width: 45px;
-      height: 45px;
-      font-size: 18px;
-    }
-
     .new-game-btn {
         width: 400px;
     }
@@ -341,11 +337,21 @@ body {
         height: 300px;
         margin: 10px auto;
     }
+
+    #solution {
+        width: 300px;
+        height: 300px;
+        margin: 10px auto;
+    }
     
     .tile {
         width: 32px;
         height: 32px;
         font-size: 16px;
+    }
+
+    #special {
+        width: 300px;
     }
     
     #digits {
